--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,6 @@
   background: #F7F7F7;
   border-radius: 25px 25px 0 0;
 }
-.menu .formule-title {
-  animation-duration: 3s;
-  animation-name: formule-title;
-}
 
 .menu-title {
   padding: 32px 17px 42px 17px;
@@ -52,6 +48,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  animation-name: formule-title;
+  animation-duration: 3s;
 }
 .formule .formule-title h3 {
   margin: 0;
@@ -78,6 +76,11 @@
   background: #fff;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
   border-radius: 15px;
+  overflow: hidden;
+}
+.menu-cards .menu-card:hover .check {
+  margin-right: 0;
+  opacity: 1;
 }
 .menu-cards .menu-card .card-content {
   width: 100%;
@@ -93,9 +96,10 @@
 
 .menu-card-text {
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
   font-size: 15px;
   font-weight: 300;
+  justify-content: space-between;
 }
 
 .price {
@@ -113,9 +117,6 @@
   align-items: center;
   margin-right: -60px;
   transition: all 0.3s ease-out;
-}
-.check:hover {
-  margin-right: 0;
 }
 .check i {
   display: flex;
@@ -164,12 +165,27 @@
 }
 @keyframes formule-title {
   from {
-    margin-top: 100%;
+    transform: scaleY(0%);
     opacity: 0;
+    margin-top: 100%;
   }
   to {
-    margin-top: 0%;
+    transform: scaleY(100%);
     opacity: 1;
+    margin-top: 0%;
+  }
+}
+@keyframes loader {
+  100% {
+    transform: translateY(-30px);
+  }
+}
+@keyframes exit-loader {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(0);
   }
 }
 /****** GENERAL******/
@@ -185,7 +201,36 @@ body {
   margin-right: auto;
 }
 
-/****** HEADER******/
+/****** LOADER ******/
+.loader {
+  position: fixed;
+  background: #f1f1f1;
+  z-index: 5;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.9;
+  overflow: hidden;
+  animation: exit-loader 0.2s 3s ease forwards;
+}
+.loader .dot {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: linear-gradient(#9356DC 0%, #FF79DA 100%);
+  margin: 0 15px;
+  animation: loader infinite 0.3s alternate;
+}
+.loader .d2 {
+  animation-delay: 0.05s;
+}
+.loader .d3 {
+  animation-delay: 0.1s;
+}
+
+/****** HEADER ******/
 header {
   position: relative;
   font-size: 10px;
@@ -333,6 +378,23 @@ a {
   color: black;
 }
 
+.new {
+  display: flex;
+  background: #99E2D0;
+  width: 80px;
+  height: 29px;
+  color: #008766;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 500;
+  border-radius: 2px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+  right: 20px;
+  top: calc(14% - 14.5px);
+}
+
 .card-text {
   display: flex;
   flex-direction: column;
@@ -360,24 +422,30 @@ a {
   right: 25px;
   bottom: 40px;
   width: 22px;
-  height: 22px;
+  height: 21px;
 }
-
-.new {
-  display: flex;
-  background: #99E2D0;
-  width: 80px;
-  height: 29px;
-  color: #008766;
+.heart:hover .heart-empty {
+  opacity: 0;
+}
+.heart:hover .heart-full {
+  opacity: 1;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-image: linear-gradient(0deg, #9356DC, #FF79DA);
+}
+.heart .heart-empty {
   position: absolute;
-  align-items: center;
-  justify-content: center;
-  font-size: 14px;
-  font-weight: 500;
-  border-radius: 2px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
-  right: 20px;
-  top: calc(14% - 14.5px);
+  opacity: 1;
+  width: 22px;
+  height: 21px;
+}
+.heart .heart-full {
+  position: absolute;
+  opacity: 0;
+  width: 22px;
+  height: 21px;
+  transition: all 2s;
 }
 
 /******FOOTER******/
