--- a/sass/menus_restaurants.scss
+++ b/sass/menus_restaurants.scss
@@ -80,6 +80,7 @@
          box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
          border-radius: 15px;
          overflow: hidden;
+         cursor: pointer;
 
          &:hover {
              .check {
