--- a/css/style.css
+++ b/css/style.css
@@ -88,11 +88,15 @@
   display: flex;
   flex-direction: column;
   padding: 12px 16px 12px 15px;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .menu-cards .menu-card .card-content .card-title {
   margin: 0;
   font-size: 18px;
   font-weight: 500;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .menu-card-text {
@@ -102,8 +106,11 @@
   font-weight: 300;
   justify-content: space-between;
 }
-
-.price {
+.menu-card-text .text {
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.menu-card-text .price {
   font-weight: 700;
   color: #353535;
 }
@@ -398,22 +405,21 @@ a {
   top: calc(14% - 14.5px);
 }
 
-.card-text {
+.card-content {
+  display: flex;
+  justify-content: space-between;
+}
+.card-content .card-text {
   display: flex;
   flex-direction: column;
 }
-.card-text .card-title {
+.card-content .card-text .card-title {
   font-size: 18px;
   line-height: 20px;
   margin: 0;
   padding: 16px 0 5px 13px;
 }
-
-.card-subtitle {
-  left: 3.82%;
-  right: 23.53%;
-  top: 85.66%;
-  bottom: 4.78%;
+.card-content .card-text .card-subtitle {
   font-size: 17px;
   font-weight: 300;
   padding: 0 0 12px 13px;
