--- a/sass/menus_restaurants.scss
+++ b/sass/menus_restaurants.scss
@@ -94,11 +94,15 @@
              display: flex;
              flex-direction: column;
              padding: 12px 16px 12px 15px;
+             overflow: hidden;
+             white-space: nowrap;
 
              .card-title {
                  margin: 0;
                  font-size: 18px;
                  font-weight: 500;
+                 overflow: hidden;
+                 text-overflow: ellipsis;
              }
          }
      }
@@ -110,12 +114,16 @@
      font-size: 15px;
      font-weight: 300;
      justify-content: space-between;
+     .text {
+        text-overflow: ellipsis;
+        overflow: hidden;
+     }
+     .price {
+         font-weight: 700;
+         color: #353535;
+     }
  }
 
- .price {
-     font-weight: 700;
-     color: #353535;
- }
 
  .check {
      display: flex;
