--- a/sass/main.scss
+++ b/sass/main.scss
@@ -264,6 +264,9 @@ a {
     bottom: 40px;
     width: 22px;
     height: 21px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &:hover {
         .heart-empty {
@@ -284,14 +287,20 @@ a {
         opacity: 1;
         width: 22px;
         height: 21px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .heart-full {
         position: absolute;
         opacity: 0;
-        width: 22px;
-        height: 21px;
+        width: 30px;
+        height: 30px;
         transition: all 2s;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 
