--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,41 @@
 
 .menu-heart {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 22px;
+  height: 21px;
+  right: 25px;
+}
+.menu-heart:hover .heart-empty {
+  opacity: 0;
+}
+.menu-heart:hover .heart-full {
+  opacity: 1;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-image: linear-gradient(0deg, #9356DC, #FF79DA);
+}
+.menu-heart .heart-empty {
+  position: absolute;
+  opacity: 1;
+  width: 22px;
+  height: 21px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.menu-heart .heart-full {
+  position: absolute;
+  opacity: 0;
+  width: 30px;
+  height: 30px;
+  transition: all 2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .formule {
@@ -98,6 +133,7 @@
   font-weight: 500;
   overflow: hidden;
   text-overflow: ellipsis;
+  padding-right: 30px;
 }
 
 .menu-card-text {
@@ -110,6 +146,7 @@
 .menu-card-text .text {
   text-overflow: ellipsis;
   overflow: hidden;
+  padding-right: 15px;
 }
 .menu-card-text .price {
   font-weight: 700;
@@ -428,9 +465,9 @@ a {
 }
 
 .heart {
-  position: absolute;
+  position: relative;
   right: 25px;
-  bottom: 40px;
+  top: 25px;
   width: 22px;
   height: 21px;
   display: flex;
