--- a/sass/menus_restaurants.scss
+++ b/sass/menus_restaurants.scss
@@ -38,6 +38,46 @@
 
  .menu-heart {
      position: relative;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     width: 22px;
+     height: 21px;
+     right: 25px;
+
+     &:hover {
+        .heart-empty {
+            opacity: 0;
+        }
+        .heart-full {
+            opacity: 1;
+            background-clip: text;
+            -webkit-background-clip: text;
+            color: transparent;
+            background-image: linear-gradient(0deg, $primary-color, $secondary-color);
+        }
+     }
+
+     .heart-empty {
+        position: absolute;
+        opacity: 1;
+        width: 22px;
+        height: 21px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+     }
+
+     .heart-full {
+        position: absolute;
+        opacity: 0;
+        width: 30px;
+        height: 30px;
+        transition: all 2s;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+     }
  }
 
  .formule {
@@ -104,6 +144,7 @@
                  font-weight: 500;
                  overflow: hidden;
                  text-overflow: ellipsis;
+                 padding-right: 30px;
              }
          }
      }
@@ -118,6 +159,7 @@
      .text {
         text-overflow: ellipsis;
         overflow: hidden;
+        padding-right: 15px;
      }
      .price {
          font-weight: 700;
