Correction keyframes formule-title + ajout de mixins + validateurs html et css OK

--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,10 @@
 }
 
 .menu-title {
-  padding: 32px 17px 42px 17px;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 32px 17px 42px 17px;
 }
 .menu-title h2 {
   width: 100%;
@@ -37,10 +37,10 @@
 }
 
 .menu-heart {
-  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
   width: 22px;
   height: 21px;
   right: 25px;
@@ -56,23 +56,23 @@
   background-image: linear-gradient(0deg, #9356DC, #FF79DA);
 }
 .menu-heart .heart-empty {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   opacity: 1;
   width: 22px;
   height: 21px;
+}
+.menu-heart .heart-full {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.menu-heart .heart-full {
   position: absolute;
   opacity: 0;
   width: 30px;
   height: 30px;
   transition: all 2s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .formule {
@@ -156,21 +156,21 @@
 
 .check {
   display: flex;
+  align-items: center;
+  justify-content: center;
   width: 59px;
   height: 69px;
   background: #99E2D0;
   border-radius: 0px 15px 15px 0px;
-  justify-content: center;
-  align-items: center;
   margin-right: -60px;
   transition: all 0.3s ease-out;
 }
 .check i {
   display: flex;
+  align-items: center;
+  justify-content: center;
   width: 20px;
   height: 20px;
-  justify-content: center;
-  align-items: center;
   color: #99E2D0;
   background: #FFFFFF;
   border-radius: 50%;
@@ -213,12 +213,12 @@
 /****** formule -title ******/
 @keyframes formule-title {
   from {
-    transform: scaleY(0%);
+    transform: scaleY(0);
     opacity: 0;
     margin-top: 100%;
   }
   to {
-    transform: scaleY(100%);
+    transform: scaleY(1);
     opacity: 1;
     margin-top: 0%;
   }
@@ -252,14 +252,14 @@ body {
 
 /****** LOADER ******/
 .loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
   background: #f1f1f1;
   z-index: 5;
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   opacity: 0.9;
   overflow: hidden;
   animation: exit-loader 0.2s 3s ease forwards;
@@ -297,9 +297,9 @@ header .logo {
 /****** LOCATION ******/
 .location {
   display: flex;
-  height: 50px;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  height: 50px;
   gap: 17px;
   color: #353535;
   background-color: #EAEAEA;
@@ -334,11 +334,11 @@ header .logo {
 
 .btn {
   display: flex;
+  align-items: center;
+  justify-content: center;
   width: 218px;
   height: 50px;
   margin: auto;
-  justify-content: center;
-  align-items: center;
   text-decoration: none;
   color: #fff;
   font-weight: 500;
@@ -380,14 +380,14 @@ header .logo {
 
 .number {
   display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   width: 24px;
   height: 24px;
   background: #9356DC;
   color: #fff;
   border-radius: 25px;
-  justify-content: center;
-  align-items: center;
   left: 21px;
 }
 
@@ -429,13 +429,13 @@ a {
 
 .new {
   display: flex;
+  align-items: center;
+  justify-content: center;
   background: #99E2D0;
   width: 80px;
   height: 29px;
   color: #008766;
   position: absolute;
-  align-items: center;
-  justify-content: center;
   font-size: 14px;
   font-weight: 500;
   border-radius: 2px;
@@ -466,14 +466,14 @@ a {
 }
 
 .heart {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   right: 25px;
   top: 25px;
   width: 22px;
   height: 21px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 .heart:hover .heart-empty {
   opacity: 0;
@@ -486,23 +486,23 @@ a {
   background-image: linear-gradient(0deg, #9356DC, #FF79DA);
 }
 .heart .heart-empty {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   opacity: 1;
   width: 22px;
   height: 21px;
+}
+.heart .heart-full {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.heart .heart-full {
   position: absolute;
   opacity: 0;
   width: 30px;
   height: 30px;
   transition: all 2s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 /******FOOTER******/
@@ -614,11 +614,11 @@ ul a {
     width: 322px;
   }
   .functioning .choice li .number {
-    position: relative;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    position: relative;
+    flex-direction: row;
     left: -35px;
   }
   .restaurants-cards {
