--- a/sass/keyframes.scss
+++ b/sass/keyframes.scss
@@ -2,13 +2,13 @@
 
 @keyframes formule-title {
     from {
-        transform: scaleY(0%);
+        transform: scaleY(0);
         opacity: 0;
         margin-top: 100%;
     }
 
     to {
-        transform: scaleY(100%);
+        transform: scaleY(1);
         opacity: 1;
         margin-top: 0%;
     }
