--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
   left: 23px;
   top: 24px;
   color: #353535;
+  cursor: pointer;
 }
 
 .image {
@@ -44,6 +45,7 @@
   width: 22px;
   height: 21px;
   right: 25px;
+  cursor: pointer;
 }
 .menu-heart:hover .heart-empty {
   opacity: 0;
@@ -369,10 +371,10 @@ header .logo {
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
   border-radius: 20px;
   align-items: center;
-  justify-content: space-evenly;
 }
 .functioning ol li i {
   color: #7E7E7E;
+  padding: 0 25px;
 }
 .functioning ol li i:hover {
   color: #9356DC;
@@ -619,7 +621,7 @@ ul a {
     justify-content: center;
     position: relative;
     flex-direction: row;
-    left: -35px;
+    left: -13px;
   }
   .restaurants-cards {
     padding: 0 20px 30px;
