--- a/sass/main.scss
+++ b/sass/main.scss
@@ -141,10 +141,10 @@ header {
             box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
             border-radius: 20px;
             align-items: center;
-            justify-content: space-evenly;
 
             i {
                 color: #7E7E7E;
+                padding: 0 25px;
 
                 &:hover {
                     color: $primary-color;
@@ -423,7 +423,7 @@ ul {
                     @include flex-center;
                     position: relative;
                     flex-direction: row;
-                    left: -35px;
+                    left: -13px;
                 }
             }
         }
