--- a/sass/menus_restaurants.scss
+++ b/sass/menus_restaurants.scss
@@ -7,6 +7,7 @@
      left: 23px;
      top: 24px;
      color: #353535;
+     cursor: pointer;
  }
 
  .image {
@@ -43,6 +44,7 @@
      width: 22px;
      height: 21px;
      right: 25px;
+     cursor: pointer;
 
      &:hover {
          .heart-empty {
